# cw721-templates

./: Cargo.toml  cargo-generate.toml  clean.sh  pre_script.rhai  test.sh
contracts/minter/: Cargo.toml
contracts/minter/examples/: schema.rs
contracts/minter/src/: contract.rs  error.rs  execute.rs  lib.rs  msg.rs  query.rs  state.rs
contracts/minter/src/integration_tests/: initialize.rs  mint.rs  mod.rs  reveal.rs  util.rs
contracts/token/: Cargo.toml
contracts/token/src/: error.rs  lib.rs  msgs.rs
